corrected nav letterspacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -85,6 +85,7 @@ img {
 
     a {
         color: white;
+        letter-spacing: .01em;
     }
 
     a:hover {
